--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -14,6 +14,8 @@
     url: "/apis/academicid/"
   - title: "AMKA Services"
     url: "/apis/amka-services/"
+  - title: "SMS Services"
+    url: "/apis/sms-services/"
 
 - title: "Λογισμικό"
   url: "https://github.com/gunet/"
